--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/AustinCodingAcademy/javascript-workbook#readme",
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "eslint": "^3.19.0",
     "functional-javascript-workshop": "^1.0.6",
     "htmllint-cli": "github:kevincolten/htmllint-cli",
@@ -27,6 +28,9 @@
     "jsdom": "^11.6.2",
     "mocha": "^5.0.0",
     "postcss-html": "^0.34.0",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
+    "reactstrap": "^7.1.0",
     "stylelint": "^7.13.0"
   }
 }
